updated css imports

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
+/* make your own css override bootstraps' */
+@import url(../node_modules/bootstrap/dist/css/bootstrap.min.css);
+
 @import url(./main.css);
 @import url(./classes.css);
+
 
 * {
   font-family: "Montserrat";
