--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,14 @@
-
-
-
-
-section span {
-  font-size: 15px;
-}
-section span, legend {
-  font-weight: 500;
-}
 main {
   width: 1290px;
 }
 
 /*   ============ HEADER ====================  */
 header.main-header {
-  background-image: linear-gradient( rgba(0, 0, 0, 0.65), 30%,  rgba(0, 0, 0, 0.3)),
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.65),
+      30%,
+      rgba(0, 0, 0, 0.3)
+    ),
     url(../public/img/header.png);
   background-size: cover;
   height: 580px;
@@ -25,19 +19,26 @@ header .card {
 header .card .tab-select button {
   border-width: 2px;
 }
+section span {
+  font-size: 15px;
+}
+section span,
+legend {
+  font-weight: 500;
+}
 
 /*   ============  FORM ====================  */
 form section {
   padding: 0 15px;
-  border: 1px solid rgba(0, 0, 0, .45) !important;
+  border: 1px solid rgba(0, 0, 0, 0.45) !important;
 }
 form section:nth-child(2) {
-  flex-grow: 0.5  ;
+  flex-grow: 0.5;
   padding: 0;
-  border: 0  !important;
+  border: 0 !important;
 }
 form section:nth-child(2) select {
-  border: 1px solid rgba(0, 0, 0, .45) !important;
+  border: 1px solid rgba(0, 0, 0, 0.45) !important;
 }
 legend {
   font-size: 14px;
@@ -58,6 +59,6 @@ fieldset {
 .plan-trips {
   margin: 200px auto 0;
 }
-.plan-trips section#places  {
+.plan-trips section#places {
   grid-template-columns: 31.7% 31.7% 31.7%;
 }
