--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* make your own css override bootstraps' */
-@import url(../node_modules/bootstrap/dist/css/bootstrap.min.css);
+/* @import url(../node_modules/bootstrap/dist/css/bootstrap.min.css); */
 
 @import url(./main.css);
 @import url(./classes.css);
@@ -11,15 +11,4 @@
 }
 body {
   background-color: #fafbfc;
-}
-
-aside {
-  background: url(../public/img/cards/card/flights.png), linear-gradient(transparent, rgba(0, 0, 0, 0.6));
-  background-blend-mode: darken;
-  background-position: center;
-  width: 90%;
-}
-
-aside:last-of-type {
-  background-image: url(../public/img/cards/card/hotels.png), linear-gradient(transparent, rgba(0, 0, 0, 0.6));
 }
