--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,13 @@ fieldset {
 .plan-trips {
   margin: 200px auto 0;
 }
-.plan-trips section#places, .plan-trips .review-cards {
+.plan-trips section#places {
   grid-template-columns: 31.7% 31.7% 31.7%;
+}
+.plan-trips .review-cards {
+  gap: 40px !important;
+  margin: auto;
+  overflow-x: scroll;
 }
 .plan-trips aside {
   background: url(../public/img/cards/card/flights.png),
@@ -77,8 +82,7 @@ fieldset {
     linear-gradient(transparent, rgba(0, 0, 0, 0.75));
 }
 .plan-trips .review-card {
-  box-shadow:
-    0px 1px 5px 1px rgba(211, 211, 211, 0.3),
+  box-shadow: 0px 1px 5px 1px rgba(211, 211, 211, 0.3),
     0px 1px 5px 1px rgba(211, 211, 211, 0.3),
     0px 1px 5px 1px rgba(211, 211, 211, 0.3),
     19px 19px 1px 2px var(--light-green-card);
