--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 /* css imports */
 @import url(./main.css);
 @import url(./classes.css);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css);
 
 * {
   font-family: "Roboto";
